Se creo el metodo toString para GameState, y se movio a este la logica de de creacion del mensaje para ScoreBoard

Se creo el enum CellEffect en BoardPanel
Se agrego el parametro CellEffect a setImage en BoardPanel
Se agrego la propiedad CellEffect a Cell

Se agrego la verificacion de celdas doradas en tryMove de Level1
Se agrego el metodo setGoldenCross en Level1
Se agrego el metodo addGoldenCells en Level1State

---------------

Se agrego un menu de eleccion de nivel antes de iniciar el juego

Se movio gran parte de la logica de rellenado de grilla al metodo fillGrid de Grid, haciendo que sus implementaciones deban pasarle un GeneratorCell
Se movio en Grid, newState e initialize a un nuevo constructor

Se creo la clase Level3
Se creo la clase BombCandy
Se creo la clase GeneratorCell y BombCandyGeneratorCell

Se agrego el parametro overlayText a setImage en BoardPanel

-------------------------

Se cambio a protected la visibilidad de Grid en Cell
Se agrego a Element el parametro Grid, y constructores con y sin el
Se agregaron constructores a Candy con y sin parametro Grid

Se creo una clase SpecialCandyGenerator
Se cambio la clase BombCandyGeneratorCell para que extienda de ella

-----------------------

Se actualizo la logica de Level3 para que funcione con las llamadas a metodos de grid desde BombCandy

-------------------------

Se cambiaron los nombres de los niveles
Se cambio el menu de niveles para que los muestre todos
Se arreglo la logica de distribucion de SpecialCandyGeneratorCell
Se cambio la cantidad de caramelos que se asigna a GeneratorCell en Level3

--------------------------

Se creo en GameApp un enum APP_SCENES y un mapa de APP_SCENES a Scene
Se creo en GameApp un metodo publico setScene(APP_SCENES scene) que pone en stage una Scene

Se creo en CandyGame metodos playerWon() y gameOver() que dan el resultado del estado del juego
Se agrego a CandyFrame la propiedad GameApp
Se agrego a CandyFrame metodos para mostrar dialogos de victoria y derrota